[gd_scene load_steps=25 format=1]

[ext_resource path="res://scenes/GAME.gd" type="Script" id=1]
[ext_resource path="res://assets/rayman.png" type="Texture" id=2]
[ext_resource path="res://assets/rayman 2.png" type="Texture" id=3]
[ext_resource path="res://scripts/PASSARO.gd" type="Script" id=4]
[ext_resource path="res://assets/felpudo/BANGUELA 010.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/BANGUELA 020.png" type="Texture" id=6]
[ext_resource path="res://assets/felpudo/BANGUELA 030.png" type="Texture" id=7]
[ext_resource path="res://assets/felpudo/BANGUELA 040.png" type="Texture" id=8]
[ext_resource path="res://assets/felpudo/BANGUELA 050.png" type="Texture" id=9]
[ext_resource path="res://assets/felpudo/BANGUELA 060.png" type="Texture" id=10]
[ext_resource path="res://assets/felpudo/BANGUELA 070.png" type="Texture" id=11]
[ext_resource path="res://scenes/cano.tscn" type="PackedScene" id=12]
[ext_resource path="res://scripts/Gerador.gd" type="Script" id=13]
[ext_resource path="res://assets/font160.fnt" type="BitmapFont" id=14]
[ext_resource path="res://sound/somScore.ogg" type="AudioStream" id=15]
[ext_resource path="res://sound/somHit.ogg" type="AudioStream" id=16]
[ext_resource path="res://sound/SomGame.ogg" type="AudioStream" id=17]
[ext_resource path="res://assets/pause_back.png" type="Texture" id=18]
[ext_resource path="res://assets/pause.png" type="Texture" id=19]

[sub_resource type="Animation" id=1]

resource/name = "back anim"
length = 6.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("BackAnim/Sprite:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 3, 6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1026, 0 ), Vector2( -1026, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackAnim/Sprite1:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 3, 6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1026, 0 ), Vector2( 0, 0 ), Vector2( -1026, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BackAnim/Sprite 2:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 3, 6 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2054, 0 ), Vector2( 1026, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 68.7409

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="SegmentShape2D" id=4]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 1004.17, 0.741882 )

[sub_resource type="SegmentShape2D" id=5]

custom_solver_bias = 0.0
a = Vector2( 642.924, 31.6279 )
b = Vector2( -0.615921, 33.9133 )

[node name="GAMENODE" type="Node2D"]

process/pause_mode = 1
script/script = ExtResource( 1 )

[node name="BackAnim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/back anim" = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "back anim"

[node name="Sprite" type="Sprite" parent="BackAnim"]

transform/pos = Vector2( -595.194, 0 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="Sprite1" type="Sprite" parent="BackAnim"]

transform/pos = Vector2( 430.806, 0 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 3 )
centered = false

[node name="Sprite 2" type="Sprite" parent="BackAnim"]

transform/pos = Vector2( 1457.65, 0 )
transform/scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 2 )
centered = false

[node name="PASSARO" type="RigidBody2D" parent="."]

transform/pos = Vector2( 199.942, 854.606 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1.60394, 0.0180844, -0.0129962, 1.15266, 84.7484, -47.2387 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 18.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 4 )

[node name="PASSAROANIMADO" type="AnimatedSprite" parent="PASSARO"]

transform/pos = Vector2( 45.8151, -28.34 )
transform/scale = Vector2( 1.4, 1.21134 )
frames = SubResource( 3 )
animation = "default"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="PASSARO"]

transform/pos = Vector2( 84.7484, -47.2387 )
transform/rot = -0.645983
transform/scale = Vector2( 1.60404, 1.15273 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="LIMITES" type="StaticBody2D" parent="."]

input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 1.55854, 0, 0, 1, 0.238686, 1667.26 )
shapes/1/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LIMITES"]

shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="LIMITES"]

transform/pos = Vector2( 0.238686, 1667.26 )
transform/scale = Vector2( 1.55854, 1 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 1

[node name="canos" type="Node2D" parent="."]

editor/display_folded = true
z/z = 2

[node name="cano" parent="canos" instance=ExtResource( 12 )]

transform/pos = Vector2( 1437.92, 707.236 )
z/z = 2
z/relative = false

[node name="GERADOR" type="Position2D" parent="canos"]

transform/pos = Vector2( 1434.23, 743.947 )
script/script = ExtResource( 13 )

[node name="Timer" type="Timer" parent="canos/GERADOR"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="TimerToReplay" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="Node2D" type="Node2D" parent="."]

z/z = 3

[node name="Control" type="Control" parent="Node2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="Label" type="Label" parent="Node2D/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 26.0
margin/top = 52.0
margin/right = 960.0
margin/bottom = 225.0
custom_fonts/font = ExtResource( 14 )
text = "0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="somScore" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 15 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="somHit" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 16 )
stream/play = false
stream/loop = false
stream/volume_db = -10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="SomGame" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 17 )
stream/play = false
stream/loop = true
stream/volume_db = -10.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Pause button" type="TouchScreenButton" parent="."]

transform/pos = Vector2( 866.946, 27.6167 )
transform/scale = Vector2( 0.487079, 0.5 )
z/z = 5
normal = ExtResource( 18 )
pressed = null
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Sprite" type="Sprite" parent="Pause button"]

transform/pos = Vector2( 73.769, 69.5054 )
transform/scale = Vector2( 1.11141, 0.742633 )
z/z = 6
texture = ExtResource( 19 )

[connection signal="timeout" from="canos/GERADOR/Timer" to="canos/GERADOR" method="_on_Timer_timeout"]

[connection signal="timeout" from="TimerToReplay" to="." method="_on_TimerToReplay_timeout"]

[connection signal="pressed" from="Pause button" to="." method="_on_Pause_button_pressed"]


